package bank_management;

public class Loan {

}
